--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,6 +37,9 @@ body.sticky-bottom-footer {
 .profile {
   img {
     width: 100%;
+    box-shadow: none !important;
+    border: none !important;
+    background: transparent !important;
   }
 }
 
